less/list.less
.list {
  &__item {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
  }

  &__container {
    &.background-enabled {
			background-color: @font-color-inverted;
		}
  }

  // List with image / bullet (ordered / unordered)
  // --------------------------------------------------
  &__item-image-container,
  &__item-bullet {
    display: flex;
  }

  &__item-image-container {
    align-items: flex-start;
    justify-content: center;
  }

  // Ordered list set up
  // --------------------------------------------------
  &__container.is-ordered-list &__item {
    counter-increment: step-counter;
  }

  &__container.is-ordered-list &__item-bullet:before {
    content: counter(step-counter);
  }
}

// --------------------------------------------------
// THEME
// --------------------------------------------------
.list {
  &__item:not(:last-child) {
    margin-bottom: @item-margin * 2;
  }

  &__item-title {
    .item-title;
  }

  &__item-title.has-margin {
    margin-bottom: @item-title-margin;
  }

  // List with image / bullet (ordered / unordered)
  // --------------------------------------------------
  &__item-image-container {
    padding: @item-padding @item-padding 0 @item-padding;
  }

  &__item-bullet {
    padding-left: @item-padding;
    padding-right: @item-padding;
  }

  // Ordered / unordered list bullet
  // --------------------------------------------------
  &__item-bullet:before {
    content: "";
    height: @icon-size * 2;
    width: @icon-size * 2;
    padding: @icon-size / 2;
    .item-title;
    text-align: center;
    background-color: @item-color;
    color: @item-color-inverted;
    border-radius: 50%;
  }

  // Animated list
  // --------------------------------------------------
  &.is-animated-list &__widget {
    overflow: hidden;
  }

  &.is-animated-list &__item {
    position: relative;
    right: -100%;
    opacity: 0;
    .transition(all .8s ease-in-out);

    &.is-animating {
      right: 0;
      opacity: 1;
    }
  }

  // Vertically align image / number with item
  // --------------------------------------------------
  &.align-items-vert-center &__item {
    align-items: center;
  }
}

